<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>nl.psek.test</groupId>
    <artifactId>psek-fitnesse-fixtures-demo</artifactId>
    <packaging>jar</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>psek-fitnesse-fixtures-demo</name>

    <properties>
        <!--PSEK-Fitnesse-Fixtures versions-->
        <psek-fitnesse-fixtures.version>1.2.1-rc6</psek-fitnesse-fixtures.version>
        <psek-fitnesse-runner.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-runner.version>
        <psek-fitnesse-fixtures-general.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-fixtures-general.version>
        <psek-fitnesse-documentation-plugin.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-documentation-plugin.version>
        <psek-fitnesse-fixtures-database.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-fixtures-database.version>
        <psek-fitnesse-fixtures-rest.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-fixtures-rest.version>
        <psek-fitnesse-fixtures-selenium.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-fixtures-selenium.version>
        <psek-fitnesse-fixtures-sikuli.version>${psek-fitnesse-fixtures.version}</psek-fitnesse-fixtures-sikuli.version>


        <junit.version>4.12</junit.version>
        <maven-antrun-plugin.version>1.6</maven-antrun-plugin.version>
        <maven-classpath-plugin.version>1.8</maven-classpath-plugin.version>
        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>

        <skipTests>true</skipTests>

        <guava.version.for.fitnesse>23.0</guava.version.for.fitnesse>

    </properties>

    <dependencyManagement></dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-runner</artifactId>
            <version>${psek-fitnesse-runner.version}</version>
        </dependency>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-runner</artifactId>
            <version>${psek-fitnesse-runner.version}</version>
            <classifier>tests</classifier>
        </dependency>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-fixtures-selenium</artifactId>
            <version>${psek-fitnesse-fixtures-selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-fixtures-general</artifactId>
            <version>${psek-fitnesse-fixtures-general.version}</version>
        </dependency>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-fixtures-database</artifactId>
            <version>${psek-fitnesse-fixtures-database.version}</version>
        </dependency>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-fixtures-rest</artifactId>
            <version>${psek-fitnesse-fixtures-rest.version}</version>
        </dependency>
        <dependency>
            <groupId>nl.psek.fitnesse</groupId>
            <artifactId>psek-fitnesse-fixtures-sikuli</artifactId>
            <version>${psek-fitnesse-fixtures-sikuli.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <excludes>
                    <exclude>**/plugins.properties</exclude>
                    <exclude>**/FitNesse/**</exclude>
                    <exclude>**/ErrorLogs/**</exclude>
                    <exclude>**/files/**</exclude>
                    <exclude>**/RecentChanges/**</exclude>
                    <exclude>**/BuildOmgeving/**</exclude>
                    <exclude>**/ConFiguratie/**</exclude>
                </excludes>
                <filtering>true</filtering>
                <targetPath>${project.build.testOutputDirectory}</targetPath>
            </testResource>
        </testResources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <fork>true</fork>
                </configuration>
            </plugin>
            <plugin>
                <groupId>nl.psek.fitnesse</groupId>
                <artifactId>psek-fitnesse-documentation-plugin</artifactId>
                <version>${psek-fitnesse-documentation-plugin.version}</version>
                <configuration>
                    <suites>
                        <suite>TestSuite</suite>
                    </suites>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>start-fitnesse-wiki</id>
            <activation></activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>${maven-antrun-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>start-fitnesse</id>
                                <phase>integration-test</phase>
                                <configuration>
                                    <tasks>
                                        <echo taskname="fitnesse" message="Starting FitNesse" />
                                        <java classname="fitnesseMain.FitNesseMain" classpathref="maven.runtime.classpath" fork="true">
                                            <arg line="-p 9000" />
                                            <arg line="-d src/test/resources/" />
                                            <arg line="-e 0" />
                                            <arg line="-r FitnesseRoot" />
                                            <jvmarg value="-Dfile.encoding=UTF-8" />
                                            <!--<jvmarg value="-Dwiki.page.old.style=true"/>-->
                                            <jvmarg value="-Xmx100M" />
                                            <jvmarg value="-XX:MaxPermSize=256M" />
                                        </java>
                                    </tasks>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.fitnesse.plugins</groupId>
                    <artifactId>maven-classpath-plugin</artifactId>
                    <version>${maven-classpath-plugin.version}</version>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                    <version>${guava.version.for.fitnesse}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>start-selenium-server</id>
            <activation></activation>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>${maven-antrun-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>start-fitnesse</id>
                                <phase>integration-test</phase>
                                <configuration>
                                    <tasks>
                                        <echo taskname="selenium-server" message="Starting Selenium Server" />
                                        <java classname="org.openqa.selenium.server.SeleniumServer" classpathref="maven.runtime.classpath" fork="true"></java>
                                    </tasks>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.fitnesse.plugins</groupId>
                    <artifactId>maven-classpath-plugin</artifactId>
                    <version>${maven-classpath-plugin.version}</version>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
        </profile>

        <!-- Profiles used to start FitNesse tests from the commandline using maven. -->
        <!-- You can expand these as needed. -->
        <profile>
            <id>start-smoke-test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>RunAllSmokeTests.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <fitnesseSkipTest>false</fitnesseSkipTest>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.fitnesse.plugins</groupId>
                    <artifactId>maven-classpath-plugin</artifactId>
                    <version>${maven-classpath-plugin.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                    <version>${guava.version.for.fitnesse}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>start-done-test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>RunAllDoneTests.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <fitnesseSkipTest>false</fitnesseSkipTest>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.fitnesse.plugins</groupId>
                    <artifactId>maven-classpath-plugin</artifactId>
                    <version>${maven-classpath-plugin.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                    <version>${guava.version.for.fitnesse}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>

        <profile>
            <id>start-regression-test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>RunAllRegressionTests.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <fitnesseSkipTest>false</fitnesseSkipTest>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.fitnesse.plugins</groupId>
                    <artifactId>maven-classpath-plugin</artifactId>
                    <version>${maven-classpath-plugin.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                    <version>${guava.version.for.fitnesse}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>start-demo-test</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <includes>
                                <include>RunAllDemoTests.java</include>
                            </includes>
                            <systemPropertyVariables>
                                <fitnesseSkipTest>false</fitnesseSkipTest>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <dependencies>
                <dependency>
                    <groupId>org.fitnesse.plugins</groupId>
                    <artifactId>maven-classpath-plugin</artifactId>
                    <version>${maven-classpath-plugin.version}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                    <version>${guava.version.for.fitnesse}</version>
                    <scope>test</scope>
                </dependency>
                <dependency>
                    <groupId>org.apache.maven</groupId>
                    <artifactId>maven-embedder</artifactId>
                    <version>3.5.0</version>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>

